--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="servicos.html">Serviços</a></li>
+                    <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
                     <li class="nav-item"><a class="nav-link" href="noticias.html">Notícias</a></li>
                     <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
                 </ul>
@@ -103,7 +103,7 @@
     </section>
 
     <!-- Rodapé -->
-    <footer class="text-center bg-dark text-light py-3">
+    <footer class="text-center bg-#1e3c72 text-light py-3">
         <p>&copy; 2025 Academia Infinity | Todos os direitos reservados.</p>
         <div>
             <a href="#" class="text-light me-3"><i class="bi bi-facebook"></i></a>
