--- a/contato.html
+++ b/contato.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Entre em contato com a Academia Infinity e saiba mais sobre nossos planos, horários e promoções.">
-    <title>Contato - Academia Infinity</title>
-
+    <meta name="description" content="Academia Infinity: Treinos personalizados, equipamentos modernos e profissionais qualificados para sua saúde e bem-estar.">
+    <title>Academia Infinity - Contato</title>
+    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <!-- CSS externo -->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -35,84 +32,96 @@
         </div>
     </nav>
 
-    <!-- Cabeçalho -->
-    <header class="text-center py-5 bg-light">
-        <div class="container">
-            <h1 class="mb-3"><font face="Poppins" color="#FF4500">Fale Conosco</font></h1>
-            <p class="lead">Tem alguma dúvida, sugestão ou quer saber mais sobre nossos planos e serviços?
-            Entre em contato com a equipe da <b>Academia Infinity</b> e nós responderemos o mais rápido possível!</p>
-        </div>
-    </header>
-
     <!-- Seção de Contato -->
-    <section class="container py-5">
+    <section class="container my-5">
         <div class="row">
             <div class="col-md-6 mb-4">
                 <h2>Por que entrar em contato?</h2>
                 <p>Você pode entrar em contato conosco para:</p>
                 <ul>
-                    <li> Tirar dúvidas sobre planos e horários</li>
-                    <li> Agendar uma aula experimental gratuita</li>
-                    <li> Saber mais sobre nossos instrutores e treinos personalizados</li>
-                    <li> Solicitar consultoria com um personal trainer</li>
-                    <li> Enviar sugestões, elogios ou feedbacks</li>
+                    <li>Tirar dúvidas sobre planos e horários</li>
+                    <li>Agendar uma aula experimental gratuita</li>
+                    <li>Saber mais sobre nossos instrutores e treinos personalizados</li>
+                    <li>Solicitar consultoria com um personal trainer</li>
+                    <li>Enviar sugestões, elogios ou feedbacks</li>
                 </ul>
-                <p> <b>E-mail para contato:</b> atendimento.infinity@academia.com.br</p>
-                <p> <b>Telefone:</b> (11) 4002-8922</p>
-                <p> <b>Endereço:</b> Rua da Saúde, 250 - São Paulo, SP</p>
+
+                <p><strong>E-mail para contato:</strong> atendimento.infinity@academia.com.br</p>
+                <p><strong>Telefone:</strong> (11) 4002-8922</p>
+                <p><strong>Endereço:</strong> Rua da Saúde, 250 - São Paulo, SP</p>
+
+                <!-- 🔽 TABELA ADICIONADA ABAIXO DO ENDEREÇO -->
+                <div class="mt-4">
+                    <h5 class="text-center mb-3">Status dos Casos de Contato</h5>
+                    <div class="table-responsive">
+                        <table class="table table-sm table-bordered text-center align-middle">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Tipo</th>
+                                    <th>Qtd</th>
+                                    <th>Situação</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Casos Enviados</td>
+                                    <td>120</td>
+                                    <td><span class="badge bg-primary">Em análise</span></td>
+                                </tr>
+                                <tr>
+                                    <td>Casos Resolvidos</td>
+                                    <td>95</td>
+                                    <td><span class="badge bg-success">Concluído</span></td>
+                                </tr>
+                                <tr>
+                                    <td>Casos em Aberto</td>
+                                    <td>18</td>
+                                    <td><span class="badge bg-warning text-dark">Pendente</span></td>
+                                </tr>
+                                <tr>
+                                    <td>Casos Não Respondidos</td>
+                                    <td>7</td>
+                                    <td><span class="badge bg-danger">Sem resposta</span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <!-- 🔼 FIM DA TABELA -->
             </div>
 
             <div class="col-md-6">
-                <h2>Envie sua mensagem</h2>
-                <form action="#" method="post" class="p-4 border rounded bg-light shadow-sm">
+                <h2>Envie Sua Mensagem</h2>
+                <form>
                     <div class="mb-3">
-                        <label for="nome" class="form-label">Nome completo</label>
-                        <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" required>
+                        <label for="nome" class="form-label">Nome</label>
+                        <input type="text" class="form-control" id="nome" placeholder="Seu nome completo">
                     </div>
-
                     <div class="mb-3">
                         <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" placeholder="exemplo@email.com" required>
+                        <input type="email" class="form-control" id="email" placeholder="seuemail@exemplo.com">
                     </div>
-
-                    <div class="mb-3">
-                        <label for="telefone" class="form-label">Telefone</label>
-                        <input type="tel" class="form-control" id="telefone" placeholder="(XX) XXXXX-XXXX">
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="assunto" class="form-label">Assunto</label>
-                        <select id="assunto" class="form-select" required>
-                            <option value="">Selecione...</option>
-                            <option value="planos">Informações sobre planos</option>
-                            <option value="aula">Agendar aula experimental</option>
-                            <option value="feedback">Deixar uma sugestão ou elogio</option>
-                            <option value="outros">Outros</option>
-                        </select>
-                    </div>
-
                     <div class="mb-3">
                         <label for="mensagem" class="form-label">Mensagem</label>
-                        <textarea class="form-control" id="mensagem" rows="4" placeholder="Digite sua mensagem aqui..." required></textarea>
+                        <textarea class="form-control" id="mensagem" rows="4" placeholder="Digite sua mensagem aqui..."></textarea>
                     </div>
-
-                    <button type="submit" class="btn btn-primary w-100">Enviar Mensagem</button>
+                    <button type="submit" class="btn btn-dark w-100">Enviar</button>
                 </form>
             </div>
         </div>
     </section>
 
     <!-- Rodapé -->
-    <footer class="text-center bg-#1e3c72 text-light py-3">
+    <footer class="text-center py-4 bg-dark text-white">
         <p>&copy; 2025 Academia Infinity | Todos os direitos reservados.</p>
         <div>
-            <a href="#" class="text-light me-3"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-light me-3"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="text-light"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
         </div>
     </footer>
 
-    <!-- Bootstrap  -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
