--- a/planos.html
+++ b/planos.html
@@ -54,7 +54,7 @@
             <font face="Poppins" color="#FF4500">
                 <b>🔥 MEGA PROMOÇÃO DE NOVEMBRO 🔥</b><br>
                 <strike>De R$149,90</strike> <b class="promo-preco">por apenas R$99,90/mês!</b><br>
-                <span class="promo-detalhes">Assine hoje e ganhe avaliação física + camiseta exclusiva </span>
+                <span class="promo-detalhes">Assine hoje e ganhe avaliação física + camiseta exclusiva! </span>
             </font>
         </div>
     </section>
