--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                     <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
                     <li class="nav-item"><a class="nav-link" href="noticia.html">Notícias</a></li>
                     <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Acesse sua conta</a></li>
+                    <li class="nav-item"><a class="nav-link" href="visualizarUsuario.html">Dados da conta</a></li>
                 </ul>
             </div>
         </div>
@@ -117,7 +119,7 @@
         <div class="container">
             <h2>Pronto para Transformar Seu Corpo?</h2>
             <p>Inscreva-se hoje e ganhe uma aula experimental gratuita!</p>
-            <a href="contato.html" class="btn btn-custom btn-lg">Inscreva-se Agora</a>
+            <a href="planos.html" class="btn btn-custom btn-lg">Inscreva-se Agora</a>
         </div>
     </section>
 
