Prevent execution if no user is found
Added a return statement to prevent further execution if no user is found in localStorage.

--- a/visualizarUsuario.html
+++ b/visualizarUsuario.html
@@ -34,6 +34,7 @@
     if (!usuario) {
         alert("Nenhum usuário cadastrado!");
         window.location.href = "login.html";
+        return; // impede continuar e evitar erro
     }
 
     let lista = document.getElementById("listaDados");
