Página notícias 100% atualizada

--- a/noticia.html
+++ b/noticia.html
@@ -27,10 +27,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="noticia.html">Notícias</a></li>
+                    <li class="nav-item"><a class="nav-link" href="noticia.html">Notícias</a></li>
                     <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Acesse sua conta</a></li>
+                    <li class="nav-item"><a class="nav-link" href="visualizarUsuario.html">Dados da conta</a></li>
                 </ul>
             </div>
         </div>
@@ -63,7 +65,7 @@
             <!-- Folha de São Paulo -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm border-0">
-                    <img src="folhadespaulo.png" class="card-img-top p-3" alt="Folha de S. Paulo">
+                    <img src="imgsgym/folhadespaulo.png" class="card-img-top p-3" alt="Folha de S. Paulo">
                     <div class="card-body text-center">
                         <h5 class="card-title">Folha de S. Paulo</h5>
                         <p class="card-text">Notícias do Brasil e do mundo com foco em esportes e qualidade de vida.</p>
@@ -75,12 +77,12 @@
             <!-- Globo.com -->
             <div class="col-md-4">
                 <div class="card h-100 shadow-sm border-0">
-                    <img src="https://static.wikia.nocookie.net/logopedia/images/3/35/TVGlobo2025.png/revision/latest?cb=20250403003551"
+                    <img src="imgsgym/globo.com.png"
                          class="card-img-top p-3" alt="Globo.com">
                     <div class="card-body text-center">
                         <h5 class="card-title">Globo.com</h5>
                         <p class="card-text">Matérias e reportagens sobre saúde e esportes atualizados diariamente.</p>
-                        <a href="https://g1.globo.com/sp/mogi-das-cruzes-suzano/videos-diario-tv-1-edicao/video/academia-segmentada-por-publico-e-nova-tendencia-no-mercado-fitness-14089725.ghtml " target="_blank" class="btn btn-outline-dark">Acessar</a>
+                        <a href="https://g1.globo.com/sp/mogi-das-cruzes-suzano/videos-diario-tv-1-edicao/video/academia-segmentada-por-publico-e-nova-tendencia-no-mercado-fitness-14089725.ghtml" target="_blank" class="btn btn-outline-dark">Acessar</a>
                     </div>
                 </div>
             </div>
@@ -113,4 +115,21 @@
 
             <!-- Época -->
             <div class="col-md-4">
-                <div class="car
+                <div class="card h-100 shadow-sm border-0">
+                    <img src="imgsgym/revistaepoca.png"
+                         class="card-img-top p-3" alt="Época">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Época</h5>
+                        <p class="card-text">Notícias e análises sobre saúde, esportes e tendências de bem-estar.</p>
+                        <a href="https://epoca.globo.com/saude/" target="_blank" class="btn btn-outline-dark">Acessar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
