--- a/contato.html
+++ b/contato.html
@@ -23,10 +23,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
                     <li class="nav-item"><a class="nav-link" href="noticia.html">Notícias</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Acesse sua conta</a></li>
+                    <li class="nav-item"><a class="nav-link" href="visualizarUsuario.html">Dados da conta</a></li>
                 </ul>
             </div>
         </div>
