--- a/noticia.html
+++ b/noticia.html
@@ -22,24 +22,48 @@
 </head>
 
 <body>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">Academia Infinity</a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="planos.html">Planos</a></li>
                     <li class="nav-item"><a class="nav-link" href="noticia.html">Notícias</a></li>
                     <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Acesse sua conta</a></li>
-                    <li class="nav-item"><a class="nav-link" href="visualizarUsuario.html">Dados da conta</a></li>
+                    <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle d-flex align-items-center"
+       href="#" id="perfilDropdown" role="button"
+       data-bs-toggle="dropdown" aria-expanded="false">
+
+        <img id="fotoPerfilNav" src="imgsgym/person-circle.svg"
+             class="rounded-circle" width="32" height="32" style="object-fit: cover;">
+        <span id="nomeUsuarioNav" class="ms-2">Minha Conta</span>
+    </a>
+
+    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perfilDropdown">
+
+        <li id="menuDados">
+            <a class="dropdown-item" href="visualizarUsuario.html">Dados da conta</a>
+        </li>
+
+        <li id="menuLogin">
+            <a class="dropdown-item" href="login.html">Acessar sua conta</a>
+        </li>
+
+        <li id="menuDivider">
+            <hr class="dropdown-divider">
+        </li>
+
+        <li id="menuSair">
+            <a class="dropdown-item text-danger" href="#" onclick="logout()">Sair</a>
+        </li>
+    </ul>
+</li>
                 </ul>
             </div>
         </div>
@@ -140,6 +164,8 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="usuario.js"></script>
+
 
 </body>
 </html>
